# StackoverFlow-RAG

./: .gitignore  01_data_ingestion.py  02_data_retrival.py  03_answer_generation.py  04_history_aware_generation.py  README.md  RemoveCache.ps1  ResetData.ps1  main.py  pyproject.toml
input/2nd-Batch/: Batch_0878.csv  Batch_0879.csv  Batch_0880.csv  Batch_0881.csv  Batch_0882.csv  Batch_0883.csv  Batch_0884.csv  Batch_0885.csv  Batch_0886.csv  Batch_0887.csv  Batch_0888.csv  Batch_0889.csv  Batch_0890.csv  Batch_0891.csv  Batch_0892.csv  Batch_0893.csv  Batch_0894.csv  Batch_0895.csv  Batch_0896.csv  Batch_0897.csv  Batch_0898.csv  Batch_0899.csv  Batch_0900.csv  Batch_0901.csv  Batch_0902.csv  Batch_0903.csv  Batch_0904.csv  Batch_0905.csv  Batch_0906.csv  Batch_0907.csv  Batch_0908.csv  Batch_0909.csv  Batch_0910.csv  Batch_0911.csv  Batch_0912.csv  Batch_0913.csv  Batch_0914.csv  Batch_0915.csv  Batch_0916.csv  Batch_0917.csv  (+83 more)
input/3rd-Batch/: Batch_1001.csv  Batch_1002.csv  Batch_1003.csv  Batch_1004.csv  Batch_1005.csv  Batch_1006.csv  Batch_1007.csv  Batch_1008.csv  Batch_1009.csv  Batch_1010.csv  Batch_1011.csv  Batch_1012.csv  Batch_1013.csv  Batch_1014.csv  Batch_1015.csv  Batch_1016.csv  Batch_1017.csv  Batch_1018.csv  Batch_1019.csv  Batch_1020.csv  Batch_1021.csv  Batch_1022.csv  Batch_1023.csv  Batch_1024.csv  Batch_1025.csv  Batch_1026.csv  Batch_1027.csv  Batch_1028.csv  Batch_1029.csv  Batch_1030.csv  Batch_1031.csv  Batch_1032.csv  (+468 more)
supportscript/: apicredentialcheck.py  dataretrival.py  datavectorstore.py  fetchquestion.py  mergecsvfiles.py
(+826 files in other folders)
